--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.androidstrike.cofepa">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -15,16 +16,16 @@
             android:name="com.androidstrike.cofepa.ui.landing.Landing"
             android:label="@string/title_activity_landing"
             android:theme="@style/Theme.COFEPA.NoActionBar"></activity>
-        <activity android:name="com.androidstrike.cofepa.ui.auth.AuthActivity" />
-        <activity
-            android:name=".ui.SplashScreen"
-            android:theme="@style/SplashScreenTheme">
+        <activity android:name="com.androidstrike.cofepa.ui.auth.AuthActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
+        <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
 
-</manifest>
+
+
+</application>
+
+    </manifest>
